# tcl-csv

./: .gitignore  .hgeol  .hgignore  Android.mk  LICENSE  Makefile.in  README  README.md  configure  configure.in  pkgIndex.tcl.in  release-mingw.cmd  release.cmd
.github/workflows/: mac.yml  mingw.yml  msvc.yml  ubuntu.yml
doc/: README.md  buildsite.tcl  makedocs.cmd  qb.csv  tclcsv.adocgen
generic/: csv.c  csv.h  tclcsv.c
src/: build.cmd  build.tcl  csv.c  csv.h  csv.tcl  khash.h  tclcsv.c  tclcsv.cfg  tclcsv.critcl  version.tcl  widget.tcl  widgets.tcl
src/msgs/: ROOT.msg
tests/: all.tcl  dialectpicker.test  tclcsv.test  write.test
win/: makefile.vc  pkgIndex.tcl.template  rules.vc
