#!/bin/bash -norc
# Configure for
# 	tclcsv
#
# Copyright (c) 2016 Ashok P. Nadkarni

# Preserve the space after comma for release.cmd
AC_INIT([tclcsv], [2.4.3])

TEA_INIT([3.13])

AC_CONFIG_AUX_DIR(tclconfig)

#--------------------------------------------------------------------
# Load the tclConfig.sh file
#--------------------------------------------------------------------

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

#-----------------------------------------------------------------------
## Std TEA setup

TEA_PREFIX
TEA_SETUP_COMPILER
TEA_PUBLIC_TCL_HEADERS
TEA_ENABLE_THREADS
TEA_ENABLE_SHARED
TEA_CONFIG_CFLAGS
TEA_ENABLE_SYMBOLS
TEA_MAKE_LIB
TEA_PROG_TCLSH

#-----------------------------------------------------------------------

TEA_ADD_SOURCES([
    generic/csv.c
    generic/tclcsv.c
])
TEA_ADD_CFLAGS([-DTCL_NO_DEPRECATED])
TEA_ADD_STUB_SOURCES([])
TEA_ADD_TCL_SOURCES([
    library/csv.tcl
    library/widgets.tcl
])

AC_DEFINE(USE_TCL_STUBS)

AC_OUTPUT([Makefile pkgIndex.tcl])
